# trail_anonymizer

./: LICENSE  README.md  pyproject.toml  requirements.txt  run.py  trail_anonymizer.py
mock_data/: fake_pii_data.csv  fake_pii_data_scrubbed.csv  fake_pii_excel.xlsx  fake_pii_excel_scrubbed.xlsx
src/: set_tldextract_cache.py  trail_anonymizer.py
